tdf#154631: fix Export as gif ignores transparence of objects

As noel indicated in https://bugs.documentfoundation.org/show_bug.cgi?id=154631#c6
"GIF does not (as far as I can tell) support partial transparency, it only has full or none transparency.
See specs linked from https://en.wikipedia.org/wiki/GIF"

Change-Id: Ib110f344a6b8f0fdfd1355e6521d979b33548709
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/150184
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
Tested-by: Jenkins
Reviewed-by: Julien Nabet <serval2412@yahoo.fr>
(cherry picked from commit 3ebe2e7170b093bfd1c417b5907f713df591654a)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/150195
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>